Signed-off-by: Pratik Mehta <38359485+pratikm121@users.noreply.github.com>

--- a/SpringSecurity/pom.xml
+++ b/SpringSecurity/pom.xml
@@ -72,7 +72,11 @@
 					 <groupId>org.apache.maven.plugins</groupId>
     				 <artifactId>maven-war-plugin</artifactId>
     				 <version>3.2.2</version>
-				</plugin>
+    				  <configuration>
+			            <warName>SpringSecurity</warName>
+			           <!-- <outputDirectory>C:\Work\Tomcat9\webapps</outputDirectory>-->
+			         </configuration> 
+				</plugin>			
 			</plugins>
 		</pluginManagement>
 	</build>
