--- a/SpringSecurity/pom.xml
+++ b/SpringSecurity/pom.xml
@@ -35,7 +35,12 @@
 		    <version>${springsecurity.version}</version>
 		</dependency>
 		
-		
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
+		    <version>${springsecurity.version}</version>
+		</dependency>	
 
 		<!-- Servlet, JSP and JSTL support -->
 		<dependency>
