--- a/SpringBootApp/src/main/resources/application.properties
+++ b/SpringBootApp/src/main/resources/application.properties
@@ -7,6 +7,25 @@
 welcome.message=Welcome to the world of Spring Boot Application.
 
 # ----------------------------------------
+#Postgres Database specific properties
+# ----------------------------------------
+spring.datasource.url=jdbc:postgresql://localhost:5432/MySpringDB
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+# Because detection is disabled you have to set correct dialect by hand.
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+# ----------------------------------------
+#Spring Data Rest path specific prperties
+# ----------------------------------------
+spring.data.rest.base-path=/sdr
+
+
+# ----------------------------------------
 #Server specific prperties
 # ----------------------------------------
 server.port=9090
